--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -3,9 +3,11 @@
     {%- if settings.background_1 != blank -%}
       --background-primary-1: {{- settings.background_1 -}};
       --background-primary-1-00: {{- settings.background_1 | append: "00" -}};
+      --background-primary-1-hover: {{- settings.background_1 | append: "1A" -}};
     {%- else -%}
       --background-primary-1: #FFFFFF;
       --background-primary-1-00: #FFFFFF00;
+      --background-primary-1-hover: #FFFFFF1A;
     {%- endif -%}
 
     {%- if settings.primary_color_1 != blank -%}
@@ -63,9 +65,11 @@
     {%- if settings.background_2 != blank -%}
       --background-primary-2: {{- settings.background_2 -}};
       --background-primary-2-00: {{- settings.background_2 | append: "00" -}};
+      --background-primary-2-hover: {{- settings.background_2 | append: "1A" -}};
     {%- else -%}
       --background-primary-2: #53C787;
       --background-primary-2-00: #53C78700;
+      --background-primary-2-hover: #53C7871A;
     {%- endif -%}
 
     {%- if settings.primary_color_2 != blank -%}
@@ -123,9 +127,11 @@
     {%- if settings.background_3 != blank -%}
       --background-primary-3: {{- settings.background_3 -}};
       --background-primary-3-00: {{- settings.background_3 | append: "00" -}};
+      --background-primary-3-hover: {{- settings.background_3 | append: "1A" -}};
     {%- else -%}
       --background-primary-3: #E06B48;
       --background-primary-3-00: #E06B4800;
+      --background-primary-3-hover: #E06B481A;
     {%- endif -%}
 
     {%- if settings.primary_color_3 != blank -%}
@@ -183,9 +189,11 @@
     {%- if settings.background_4 != blank -%}
       --background-primary-4: {{- settings.background_4 -}};
       --background-primary-4-00: {{- settings.background_4 | append: "00" -}};
+      --background-primary-4-hover: {{- settings.background_4 | append: "1A" -}};
     {%- else -%}
       --background-primary-4: #1A3333;
       --background-primary-4-00: #1A333300;
+      --background-primary-4-hover: #1A33331A;
     {%- endif -%}
 
     {%- if settings.primary_color_4 != blank -%}
@@ -243,9 +251,11 @@
     {%- if settings.background_5 != blank -%}
       --background-primary-5: {{- settings.background_5 -}};
       --background-primary-5-00: {{- settings.background_5 | append: "00" -}};
+      --background-primary-5-hover: {{- settings.background_5 | append: "1A" -}};
     {%- else -%}
       --background-primary-5: #F6F4F2;
       --background-primary-5-00: #F6F4F200;
+      --background-primary-5-hover: #F6F4F21A;
     {%- endif -%}
 
     {%- if settings.primary_color_5 != blank -%}
