--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,133 +1,251 @@
 {{ "hero.css" | asset_url | stylesheet_tag }}
 
-{%- assign custom_title          = section.settings.custom_title -%}
-{%- assign custom_description    = section.settings.custom_description -%}
-{%- assign show_datepicker       = section.settings.show_datepicker -%}
-{%- assign image                 = section.settings.image -%}
 {%- assign color_palette         = section.settings.color_palette -%}
+{%- assign height                = section.settings.height -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign background_style      = settings.background_style -%}
-
-{%- if show_datepicker -%}
-  {%- if color_palette == "one" -%}
-    {%- if settings.accent_background != blank -%}
-      {%- assign background_accent = settings.accent_background -%}
-    {%- else -%}
-      {%- assign background_accent = branding_color -%}
-    {%- endif -%}
-  {%- elsif color_palette == "two" -%}
-    {%- if settings.accent_background_2 != blank -%}
-      {%- assign background_accent = settings.accent_background_2 -%}
-    {%- else -%}
-      {%- assign background_accent = branding_color -%}
-    {%- endif -%}
-  {%- endif -%}
-{%- endif -%}
+{%- assign tag                   = section.settings.tag -%}
+{%- assign title                 = section.settings.title -%}
+{%- assign description           = section.settings.description -%}
+{%- assign image                 = section.settings.image -%}
+{%- assign image_mobile          = section.settings.image_mobile -%}
+{%- assign video_url             = section.settings.video_url | strip -%}
+{%- assign show_overlay          = section.settings.show_overlay -%}
+{%- assign overlay_background    = section.settings.overlay_background -%}
+{%- assign overlay_color         = section.settings.overlay_color -%}
+{%- assign overlay_opacity       = section.settings.overlay_opacity -%}
+{%- assign button_1              = section.settings.button_1 -%}
+{%- assign button_url_1          = section.settings.button_url_1 -%}
+{%- assign button_2              = section.settings.button_2 -%}
+{%- assign button_url_2          = section.settings.button_url_2 -%}
+{%- assign text_position         = section.settings.text_position -%}
+{%- assign text_position_mobile  = section.settings.text_position_mobile -%}
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
+  {%- case height -%}
+    {%- when 'small' -%}
+      --height: 730px;
+    {%- when 'medium' -%}
+      --height: 839px;
+    {%- when 'full' -%}
+      --height: 100vh;
+  {%- endcase -%}
+
   {%- case padding_top -%}
     {%- when 'small' -%}
-      --padding-top: 50px;
+      --padding-top: 30px;
     {%- when 'medium' -%}
-      --padding-top: 85px;
+      --padding-top: 60px;
     {%- when 'large' -%}
-      --padding-top: 112px;
+      --padding-top: 100px;
   {%- endcase -%}
 
   {%- case padding_bottom -%}
     {%- when 'small' -%}
-      --padding-bottom: 50px;
+      --padding-bottom: 30px;
     {%- when 'medium' -%}
-      --padding-bottom: 85px;
+      --padding-bottom: 60px;
     {%- when 'large' -%}
-      --padding-bottom: 112px;
+      --padding-bottom: 100px;
   {%- endcase -%}
 
   {%- case padding_top_mobile -%}
     {%- when 'small' -%}
-      --padding-top-mobile: 40px;
+      --padding-top-mobile: 30px;
     {%- when 'medium' -%}
-      --padding-top-mobile: 57px;
+      --padding-top-mobile: 50px;
     {%- when 'large' -%}
-      --padding-top-mobile: 75px;
+      --padding-top-mobile: 80px;
   {%- endcase -%}
 
   {%- case padding_bottom_mobile -%}
     {%- when 'small' -%}
-      --padding-bottom-mobile: 40px;
+      --padding-bottom-mobile: 30px;
     {%- when 'medium' -%}
-      --padding-bottom-mobile: 57px;
+      --padding-bottom-mobile: 50px;
     {%- when 'large' -%}
-      --padding-bottom-mobile: 75px;
+      --padding-bottom-mobile: 80px;
   {%- endcase -%}
+
+  {%- case text_position -%}
+    {%- when 'left' -%}
+      --text-justify-content: flex-start;
+      --text-align-items: center;
+      --text-align: left;
+      --margin-bottom: 70px;
+      --margin-left: 0;
+      --margin-right: auto;
+    {%- when 'center' -%}
+      --text-justify-content: center;
+      --text-align-items: center;
+      --text-align: center;
+      --margin-bottom: 70px;
+      --margin-left: auto;
+      --margin-right: auto;
+    {%- when 'right' -%}
+      --text-justify-content: flex-end;
+      --text-align-items: center;
+      --text-align: right;
+      --margin-bottom: 70px;
+      --margin-left: auto;
+      --margin-right: 0;
+  {%- endcase -%}
+
+  {%- case text_position_mobile -%}
+    {%- when 'left' -%}
+      --text-justify-content-mobile: flex-start;
+      --text-align-items-mobile: center;
+      --text-align-mobile: left;
+      --margin-bottom-mobile: 60px;
+      --margin-left-mobile: 0;
+      --margin-right-mobile: auto;
+    {%- when 'center' -%}
+      --text-justify-content-mobile: center;
+      --text-align-items-mobile: center;
+      --text-align-mobile: center;
+      --margin-bottom-mobile: 60px;
+      --margin-left-mobile: auto;
+      --margin-right-mobile: auto;
+    {%- when 'right' -%}
+      --text-justify-content-mobile: flex-end;
+      --text-align-items-mobile: center;
+      --text-align-mobile: right;
+      --margin-bottom-mobile: 60px;
+      --margin-left-mobile: auto;
+      --margin-right-mobile: 0;
+  {%- endcase -%}
+
+  {%- if show_overlay -%}
+    --color-overlay: {{- overlay_color -}};
+    --background-overlay: {{- overlay_background -}};
+    --background-overlay-00: {{- overlay_background | append: "00" -}};
+    --overlay-opacity: {{ overlay_opacity | append: "%"}};
+
+    {%- case text_position -%}
+      {%- when 'left' -%}
+        --overlay-direction: 127deg;
+      {%- when 'center' -%}
+        --overlay-direction: 180deg;
+      {%- when 'right' -%}
+        --overlay-direction: 217deg;
+    {%- endcase -%}
+
+    {%- case text_position_mobile -%}
+      {%- when 'left' -%}
+        --overlay-direction-mobile: 127deg;
+      {%- when 'center' -%}
+        --overlay-direction-mobile: 180deg;
+      {%- when 'right' -%}
+        --overlay-direction-mobile: 217deg;
+    {%- endcase -%}
+  {%- endif -%}
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="hero__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{%- endif -%}" style="{{- variables | escape -}}">
+<div class="hero__wrapper hero__wrapper-{{- height -}}-height{% if color_palette != blank %} palette-{{ color_palette }}{%- endif -%}" style="{{- variables | escape -}}">
   <div class="hero__container container{% if padding_top != blank or padding_top_mobile != blank %} hero__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} hero__container--padding-bottom{%- endif -%}">
-    <div class="hero__content">
-      {%- if custom_title != blank -%}
-        <h1 class="hero__title">{{- custom_title -}}</h1>
-      {%- else -%}
-        <h1 class="hero__title">{{- page_title -}}</h1>
-      {%- endif -%}
-
-      {%- if custom_description != blank -%}
-        <div class="hero__description text-medium bq-content rx-content">{{- custom_description -}}</div>
-      {%- else -%}
-        {%- if page_description != blank -%}
-          <div class="hero__description text-medium">{{- page_description -}}</div>
+    <div class="hero__text-area{% if show_overlay %} hero__text-area--color{%- endif -%}">
+      <div class="hero__content">
+        {%- if tag != blank -%}
+          <strong class="hero__tag tagline">{{- tag -}}</strong>
         {%- endif -%}
-      {%- endif -%}
+
+        {%- if title != blank -%}
+          {%- if carousel -%}
+            <h2 class="hero__title bq-content rx-content">{{- title -}}</h2>
+          {%- else -%}
+            <h1 class="hero__title bq-content rx-content">{{- title -}}</h1>
+          {%- endif -%}
+        {%- endif -%}
+
+        {%- if description != blank -%}
+          <div class="hero__description text-medium bq-content rx-content">{{- description | truncatewords: 20, " ..." -}}</div>
+        {%- endif -%}
+
+        {%- if button_1 != blank or button_2 != blank -%}
+          <div class="hero__buttons">
+            {%- if button_1 != blank and button_url_1 != blank -%}
+              <a href="{{ button_url_1 }}" class="hero__button button button--primary button--large">{{- button_1 -}}</a>
+            {%- endif -%}
+
+            {%- if button_2 != blank and button_url_2 != blank -%}
+              <a href="{{ button_url_2 }}" class="hero__button button button--outlined button--large">{{- button_2 -}}</a>
+            {%- endif -%}
+          </div>
+        {%- endif -%}
+
+      </div>
     </div>
   </div>
 
-  {%- if show_datepicker -%}
-    <div class="hero__date-picker date-picker">
-      <div class="hero__container container">
-        <div class="hero__date-picker-component date-picker__component">
-          {%- include 'date-picker' -%}
-        </div>
-      </div>
-      <div class="hero__overlay"></div>
-    </div>
-  {%- endif -%}
+  <div class="hero__vision">
+    {%- if video_url contains "youtube.com" -%}
+      {%- assign video_drop = video_url | split: "?v=" -%}
+      {%- assign video_id   = video_drop | last | strip -%}
 
-  {%- if image != blank -%}
-    <div class="hero__vision{% if show_datepicker %} hero__vision--indent{%- endif -%}">
-      <div class="hero__vision-wrapper">
+      <div class="hero__vision-wrapper{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
+        <iframe
+          class="hero__video"
+          width="1920"
+          height="1080"
+          src="https://www.youtube.com/embed/{{- video_id -}}?playlist={{- video_id -}}&autoplay=1&mute=1&loop=1&controls=0&disablekb=1&fs=0&playsinline=1&enablejsapi=1&iv_load_policy=3&modestbranding=1"
+          frameborder="0"
+          allow="autoplay; muted; encrypted-media; fullscreen"
+          allowfullscreen
+          autoplay
+          loop
+          mute
+          playsinline
+        ></iframe>
+      </div>
+
+    {%- elsif video_url contains "vimeo.com" -%}
+      {%- assign video_drop = video_url | split: "/" -%}
+      {%- assign video_id   = video_drop | last | strip -%}
+
+      <div class="hero__vision-wrapper{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
+        <iframe
+          class="hero__video"
+          src="https://player.vimeo.com/video/{{- video_id -}}?autoplay=1&muted=1&loop=1&autopause=0&controls=0&background=1"
+          width="1920"
+          height="1080"
+          frameborder="0"
+          allow="autoplay; fullscreen"
+          allowfullscreen
+          autoplay
+          muted
+          loop
+        ></iframe>
+      </div>
+
+    {%- elsif image != blank or image_mobile != blank -%}
+      {%- if image != blank -%}
+        <div class="hero__vision-wrapper{% if image_mobile != blank %} hero__vision-wrapper--desktop{% endif %}{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
           {%- render 'image',
             image: image,
             loading: 'lazy',
             class: 'hero__image',
             size: 'xxl'
           -%}
-      </div>
-      <div class="hero__vision-wrapper-overlay container"></div>
-    </div>
-  {%- else -%}
-    {%- unless background_style == 'none' -%}
-      <div class="hero__vision{% if show_datepicker %} hero__vision--indent{%- endif -%}">
-        {%- if background_style == 'cubes' -%}
-          <div class="hero__vision-wrapper">
-            {%- render 'image-background-cubes' -%}
-            <div class="hero__vision-wrapper-overlay container"></div>
-          </div>
-        {%- elsif background_style == 'floral' -%}
-          <div class="hero__vision-floral-wrapper">
-            {%- render 'image-background-flover-1' -%}
-          </div>
-        {%- endif -%}
-      </div>
-    {%- endunless -%}
-  {%- endif -%}
-</div>
+        </div>
+      {%- endif -%}
 
-{% include 'script-hero-background' %}
+      {%- if image_mobile != blank -%}
+        <div class="hero__vision-wrapper hero__vision-wrapper--mobile{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
+          {%- render 'image',
+            image: image_mobile,
+            loading: 'lazy',
+            class: 'hero__image',
+            size: 'l'
+          -%}
+        </div>
+      {%- endif -%}
+    {%- endif -%}
+  </div>
+</div>
 
 {% schema %}
   {
@@ -135,26 +253,10 @@
     "tag": "section",
     "class": "hero",
     "description": "Engage visitors by giving great first impression",
-    "templates": ["collection", "list-collections", "page"],
     "settings": [
       {
         "type": "header",
         "content": "General settings"
-      },
-      {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Background image"
-      },
-      {
-        "type": "text",
-        "id": "custom_title",
-        "label": "Custom title"
-      },
-      {
-        "type": "contentEditor",
-        "id": "custom_description",
-        "label": "Custom description"
       },
       {
         "type": "select",
@@ -168,19 +270,158 @@
           {
             "value": "two",
             "label": "Color set 2"
+          },
+          {
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
-        "default": "two"
+        "default": "four"
+      },
+      {
+        "type": "text",
+        "id": "tag",
+        "label": "Tagline",
+        "info": "Leave blank to hide tagline"
+      },
+      {
+        "type": "contentEditor",
+        "id": "title",
+        "label": "Title",
+        "default": "Explore like <br> a daredevil"
+      },
+      {
+        "type": "contentEditor",
+        "id": "description",
+        "label": "Description",
+        "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse <br> varius enim in eros elementum tristique."
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Image",
+        "default": "booqable://assets/image-hero.jpeg"
+      },
+      {
+        "type": "image_picker",
+        "id": "image_mobile",
+        "label": "Image mobile (optional)"
+      },
+      {
+        "type": "text",
+        "id": "video_url",
+        "label": "Video URL (optional)",
+        "info": "Youtube, Vimeo. If you paste video link here, any images will be ignored"
+      },
+      {
+        "type": "header",
+        "content": "Image overlay"
       },
       {
         "type": "checkbox",
-        "id": "show_datepicker",
-        "default": true,
-        "label": "Show date picker"
+        "id": "show_overlay",
+        "label": "Show overlay",
+        "default": true
+      },
+      {
+        "type": "color",
+        "id": "overlay_background",
+        "label": "Overlay background color",
+        "default": "#1A3333"
+      },
+      {
+        "type": "color",
+        "id": "overlay_color",
+        "label": "Overlay text color",
+        "default": "#FFFFFF"
+      },
+      {
+        "type": "number",
+        "id": "overlay_opacity",
+        "label": "Overlay percentage",
+        "min": 0,
+        "max": 100,
+        "default": 72
+      },
+      {
+        "type": "header",
+        "content": "Buttons"
+      },
+      {
+        "type": "text",
+        "id": "button_1",
+        "label": "Button 1 label",
+        "default": "Check out products",
+        "info": "Leave blank to hide the button"
+      },
+      {
+        "type": "url",
+        "id": "button_url_1",
+        "label": "Button 1 link"
+      },
+      {
+        "type": "text",
+        "id": "button_2",
+        "label": "Button 2 label",
+        "default": "More info",
+        "info": "Leave blank to hide the button"
+      },
+      {
+        "type": "url",
+        "id": "button_url_2",
+        "label": "Button 2 link"
       },
       {
         "type": "header",
         "content": "Desktop settings"
+      },
+      {
+        "type": "select",
+        "id": "height",
+        "label": "Section height",
+        "options": [
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "full",
+            "label": "Full"
+          }
+        ],
+        "default": "medium"
+      },
+      {
+        "type": "select",
+        "id": "text_position",
+        "label": "Text position",
+        "options": [
+          {
+            "value": "left",
+            "label": "Left"
+          },
+          {
+            "value": "center",
+            "label": "Center"
+          },
+          {
+            "value": "right",
+            "label": "Right"
+          }
+        ],
+        "default": "left"
       },
       {
         "type": "select",
@@ -228,6 +469,26 @@
       },
       {
         "type": "select",
+        "id": "text_position_mobile",
+        "label": "Text position",
+        "options": [
+          {
+            "value": "left",
+            "label": "Left"
+          },
+          {
+            "value": "center",
+            "label": "Center"
+          },
+          {
+            "value": "right",
+            "label": "Right"
+          }
+        ],
+        "default": "left"
+      },
+      {
+        "type": "select",
         "id": "padding_top_mobile",
         "label": "Padding top",
         "options": [
@@ -244,7 +505,7 @@
             "label": "Large"
           }
         ],
-        "default": "medium"
+        "default": "large"
       },
       {
         "type": "select",
@@ -264,7 +525,7 @@
             "label": "Large"
           }
         ],
-        "default": "medium"
+        "default": "small"
       }
     ]
   }
